Fix dev-tools overflow (#9117)

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -6055,7 +6055,6 @@ body {
   flex-grow: 1;
   position: relative;
   min-width: 428px;
-  z-index: 0;
 }
 ._1gpgayi7 {
   align-items: center;
